--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "2.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.12.0",
+    "@parcel/transformer-sass": "^2.13.0",
     "process": "^0.11.10"
   },
   "keywords": []
 }
-
