--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.0.1",
+    "react-router-dom": "^7.0.1",
     "sass": "^1.81.0"
   },
   "devDependencies": {
