--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "parcel build src/index.html"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
+    "buffer": "^6.0.3",
     "process": "^0.11.10"
   },
   "keywords": []
