--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
     "buffer": "^6.0.3",
+    "parcel": "^2.13.0",
     "process": "^0.11.10"
   },
   "keywords": []
